--- a/dust/CMakeLists.txt
+++ b/dust/CMakeLists.txt
@@ -5,4 +5,5 @@ set_target_properties(dust PROPERTIES
 	CXX_STANDARD 20)
 
 target_link_libraries(dust PRIVATE
-	dust::render)
+	dust::render
+	SDL2::SDL2)
