--- a/render/CMakeLists.txt
+++ b/render/CMakeLists.txt
@@ -2,6 +2,7 @@ find_package(Vulkan REQUIRED)
 
 add_library(render STATIC
 	src/vulkan/vulkan_backend.cpp
+	src/vulkan/vulkan_config.cpp
 	src/vulkan/vulkan_frame.cpp
 	src/vulkan/vulkan_renderer.cpp
 	src/vulkan/vulkan_util.cpp
